[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tolbert"
version = "0.1.0"
description = "TOLBERT: Tree-of-Life BERT for hierarchical, cross-domain language and code representation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Peyton Tolbert" }
]
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "pyyaml>=6.0",
  "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "isort>=5.0",
]

[project.urls]
repository = "https://github.com/peytontolbert/tolbert.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["tolbert", "scripts"]

[project.scripts]
tolbert-train = "scripts.train_tolbert:main"
tolbert-train-flat = "scripts.train_flat_baseline:main"
tolbert-eval-hier = "scripts.eval_hierarchical_classification:main"
tolbert-eval-flat = "scripts.eval_flat_baseline:main"
tolbert-eval-retrieval = "scripts.eval_retrieval:main"


